--- a/proyecto-frontend/src/assets/global.scss
+++ b/proyecto-frontend/src/assets/global.scss
@@ -4,6 +4,7 @@ $verde-principal: #48BF84;
 $verde-clarito: #F1FFFA;
 $verde-oscuro: #439775;
 $verde-secundario: #61D095;
+$verde-musgo: #464E47;
 
 //degradado 
 $verde-claro-iniciar-sesion: #CCFCCB;
