--- a/proyecto-frontend/src/componentes/reusables_CF/input_box/input_box.scss
+++ b/proyecto-frontend/src/componentes/reusables_CF/input_box/input_box.scss
@@ -4,12 +4,15 @@
 .sub-rectangle {
     height: 45px;
     width: 45vh;
-    background-color: $verde-claro-iniciar-sesion;
+    background-color: #F1FFFA;
     margin-bottom: 30px;
     border-radius: 10px;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+    border: 1px #8B8B8B;
+    color: $gris-titulo;
+    font-size: 15px;
+    font-family: "Inter", sans-serif;
   }
-
 
   /*
   .sub-rectangle-first {
