Cuadro de Error

--- a/proyecto-frontend/src/componentes/background/background.scss
+++ b/proyecto-frontend/src/componentes/background/background.scss
@@ -77,3 +77,13 @@
     border-radius: 10px;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
 }
+
+.green-button {
+  background-color: green;
+  color: white;
+  margin-top: 100px;
+  padding: 10px 30px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
