--- a/proyecto-frontend/src/errorFolder/card.css
+++ b/proyecto-frontend/src/errorFolder/card.css
@@ -1,5 +1,6 @@
+
 .card{
-    background-color: #96E6B3;
+    background-color: #F1FFFA;
     box-shadow: 0 2px 8px rgba(0,0,0,0.26) ;
     border-radius: 10px;
     align-content: center;
