arreglo bug del merge porque momi no pudo

--- a/proyecto-frontend/src/componentes/reusables_CF/input_box/input_box.scss
+++ b/proyecto-frontend/src/componentes/reusables_CF/input_box/input_box.scss
@@ -12,6 +12,9 @@
     color: $gris-titulo;
     font-size: 15px;
     font-family: "Inter", sans-serif;
+    border-color: #c1c1c1;
+    border-style: solid ;
+    padding-left: 2%;
   }
 
   /*
