--- a/proyecto-frontend/src/componentes/reusables_CF/coso_verde/coso_verde.scss
+++ b/proyecto-frontend/src/componentes/reusables_CF/coso_verde/coso_verde.scss
@@ -12,7 +12,7 @@
     right: 0;
     border-radius: 15px;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
   }
@@ -22,5 +22,5 @@
     font-family: "Inter", sans-serif;
     font-weight: bold;
     color: #333;
-    transform: translateX(35px);
+    //transform: translateX(35px);
   }
