--- a/proyecto-frontend/src/componentes/agregarCampo/agregarCampo.scss
+++ b/proyecto-frontend/src/componentes/agregarCampo/agregarCampo.scss
@@ -1,10 +1,26 @@
 @import "../../assets/global.scss";
 
-
-
-
 .agregar-campo-titulo{
     color: $verde-musgo;
+    width: 100%;
+    margin: 2% 5%;
+    text-align: left;
+}
+
+.foto{
+    background-color: $verde-clarito;
+    text-align: center;
+    border-style: 1px ;
+    border: solid;
+    border-radius: 10px;
+    border-color: rgb(202, 202, 202);
+    height: 15vh;
+    width: 45vh;
+    margin-left: 4%;
+}
+
+.tarjetas{
+    display:flex;
 }
 
 
