--- a/proyecto-frontend/src/componentes/reusable/card/card.scss
+++ b/proyecto-frontend/src/componentes/reusable/card/card.scss
@@ -7,13 +7,13 @@
     align-content: center;
     margin: 15% 25%;
     border-radius: 10px;
+    width: 50vh;
 }
 
 
 .input {
     margin: 2rem auto;
     padding: 1rem;
-    width: 90%;
     max-width: 40rem;
   }
   
@@ -23,17 +23,20 @@
     margin-bottom: 0.5rem;
   }
   
+/*
   .input input {
     font: inherit;
-    display: block;
     width: 100%;
+    display: inline-block;
     border: 1px solid #ccc;
-    padding: 0.15rem;
     margin-bottom: 0.5rem;
     border-radius: 5px;
+    margin-right: 0.5rem;
   }
   
   .input input:focus {
     outline: none;
-    border-color: #4f005f;
+    border-color: #24472b;
   }
+
+*/  
