--- a/proyecto-frontend/src/componentes/reusable/input_box/input_box.scss
+++ b/proyecto-frontend/src/componentes/reusable/input_box/input_box.scss
@@ -2,7 +2,7 @@
 
 
 .sub-rectangle {
-    height: 45px;
+    height: 5vh;
     width: 45vh;
     background-color: #F1FFFA;
     margin-bottom: 30px;
@@ -10,7 +10,7 @@
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
     border: 1px #8B8B8B;
     color: $gris-titulo;
-    font-size: 15px;
+    font-size: 25px;
     font-family: "Inter", sans-serif;
     border-color: #c1c1c1;
     border-style: solid ;
