--- a/proyecto-frontend/src/componentes/agregarCampo/agregarCampo.scss
+++ b/proyecto-frontend/src/componentes/agregarCampo/agregarCampo.scss
@@ -1,26 +1,35 @@
 @import "../../assets/global.scss";
 
-.agregar-campo-titulo{
-    color: $verde-musgo;
-    width: 100%;
-    margin: 2% 5%;
-    text-align: left;
+
+.agregar-campo-titulo {
+  color: $verde-musgo;
+  width: 100%;
+  margin: 2% 5%;
+  text-align: left;
 }
 
-.foto{
-    background-color: $verde-clarito;
-    text-align: center;
-    border-style: 1px ;
-    border: solid;
-    border-radius: 10px;
-    border-color: rgb(202, 202, 202);
-    height: 15vh;
-    width: 45vh;
-    margin-left: 4%;
+.foto {
+  background-color: $verde-clarito;
+  text-align: center;
+  border: 1px solid rgb(202, 202, 202);
+  border-radius: 10px;
+  height: 15vh;
+  width: 45vh;
+  margin-left: 4%;
 }
 
-.tarjetas{
-    display:flex;
+.tarjetas {
+  display: flex;
 }
+
+.botones {
+  display: flex;
+  align-items: end;
+  justify-content: flex-end;
+  grid-template-columns: repeat(2, auto);
+  column-gap: 2vh;
+  margin-right: 2vh;
+}
+
 
 
