--- a/proyecto-frontend/src/componentes/reusable/header/header.scss
+++ b/proyecto-frontend/src/componentes/reusable/header/header.scss
@@ -9,9 +9,13 @@ header{
     align-items: center;
     justify-content: space-between;
 }
+
 .agroIa{
     @include alignHorizontally;
-   
+}
+
+.agroIa:hover{
+    cursor: pointer;
 }
 
 h1{
