--- a/src/componentes/reusable/boton/boton.scss
+++ b/src/componentes/reusable/boton/boton.scss
@@ -28,3 +28,9 @@
     color: white  !important;
     border-style: $verde-principal !important;
   }
+
+  .button-text {
+  display: block;
+  text-align: center;
+  line-height: 1.2;
+}
