--- a/src/componentes/reusable/boton/button.scss
+++ b/src/componentes/reusable/boton/button.scss
@@ -34,3 +34,28 @@
   text-align: center;
   line-height: 1.2;
 }
+
+
+//BOTON DEL ERROR
+.button {
+    font: inherit;
+    border: 1px solid #439775;
+    background: #439775;
+    color: white;
+    padding: 0.25rem 1rem;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-top: 0.5rem;
+  }
+  
+  .button:hover,
+  .button:active {
+    background: #439775;
+    border-color: #439775;
+  }
+  
+  .button:focus {
+    outline: none;
+  }
+
+
