cambio de ligare mapa

--- a/src/componentes/reusable/boton/button.scss
+++ b/src/componentes/reusable/boton/button.scss
@@ -10,7 +10,7 @@
     cursor: pointer;
     font-size: 20px;
     border: solid;
-    border-style: 1px $verde-oscuro; 
+    border-style: $verde-oscuro; 
     font-family: "Inter", sans-serif;
   }
 
