--- a/src/componentes/reusable/boton/button.scss
+++ b/src/componentes/reusable/boton/button.scss
@@ -2,6 +2,8 @@
 
 .green-button {
     background-color: $verde-oscuro;
+    border: solid;
+    border-color: $verde-oscuro;
     color: white;
     margin: 0.5%;
     margin-top: 10px;
@@ -9,8 +11,6 @@
     border-radius: 10px;
     cursor: pointer;
     font-size: 20px;
-    border: solid;
-    border-style: $verde-oscuro; 
     font-family: "Inter", sans-serif;
   }
 
