feat: mejoras al mapa

--- a/src/componentes/reusable/input_box/input_box.scss
+++ b/src/componentes/reusable/input_box/input_box.scss
@@ -17,6 +17,10 @@
     padding-left: 2%;
   }
 
+  .agregar-campo-input{
+    width: fit-content;
+  }
+
   /*
   .sub-rectangle-first {
     height: 45px;
