Ahora es responsive

--- a/src/componentes/reusable/input_box/input_box.scss
+++ b/src/componentes/reusable/input_box/input_box.scss
@@ -2,15 +2,15 @@
 
 
 .sub-rectangle {
-    height: 5vh;
-    width: 45vh;
+    height: 3.2rem;
+    width: 26rem;
     background-color: #F1FFFA;
-    margin-bottom: 30px;
-    border-radius: 10px;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
-    border: 1px #8B8B8B;
+    margin-bottom: 5vh;
+    border-radius: 2vh;
+    box-shadow: 1vh 1vh 1vh rgba(0, 0, 0, 0.2);
+    border: 0.2vh #8B8B8B;
     color: $gris-titulo;
-    font-size: 20px;
+    font-size: 2.5vh;
     font-family: "Inter", sans-serif;
     border-color: #c1c1c1;
     border-style: solid ;
