--- a/src/componentes/reusable/coso_verde/coso_verde.scss
+++ b/src/componentes/reusable/coso_verde/coso_verde.scss
@@ -3,14 +3,14 @@
 
 .green-rectangle {
     background-color: $verde-principal;
-    height: 10vh; /* Ajusta el tamaño vertical */
-    width: 35vh; /* Ajusta el tamaño horizontal */
+    height: 5.8rem; /* Ajusta el tamaño vertical */
+    width: 18rem; /* Ajusta el tamaño horizontal */
     margin: 0 auto; /* Centra horizontalmente */
     position: absolute;
-    top: 5vh; /* Ajusta la distancia con el rectángulo blanco */
+    top: 3rem; /* Ajusta la distancia con el rectángulo blanco */
     left: 0;
     right: 0;
-    border-radius: 15px;
+    border-radius: 2vh;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -18,7 +18,7 @@
   }
 
   .text {
-    font-size: 35px;
+    font-size: 2.7rem;
     font-family: "Inter", sans-serif;
     font-weight: bold;
     color: #333;
