--- a/src/componentes/reusable/white_container/white_container.scss
+++ b/src/componentes/reusable/white_container/white_container.scss
@@ -3,23 +3,23 @@
 
 .white-rectangle {
     background-color: white;
-    height: 70vh;
-    width: 60vh;
+    height: 40rem;
+    width: 35rem;
     margin: auto;
     position: absolute;
-    top: 20vh;
+    top: 11.7rem;
     left: 0;
     right: 0;
-    border-radius: 20px;
+    border-radius: 2.5vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start; 
-    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
+    box-shadow: 1vh 1vh 2vh rgba(0, 0, 0, 0.2);
   }
 
   .container-text {
-    font-size: 30px; 
+    font-size: 2.3rem; 
     font-family: "Inter", sans-serif; 
     text-align: center;
     color: $gris-titulo; 
@@ -27,8 +27,8 @@
     top: 3vh; 
     left: 0;
     right: 0;
-    margin-bottom: 30px;
-    margin-top: 20px;
+    margin-bottom: 3.5vh;
+    margin-top: 2.5vh;
   }
 
   .invisible-white-rectangle {
@@ -37,10 +37,10 @@
     width: 60vh;
     margin: auto;
     position: absolute;
-    top: 20vh;
+    top: 11.7rem;
     left: 0;
     right: 0;
-    border-radius: 20px;
+    border-radius: 2.5vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -49,14 +49,14 @@
 
   .small-white-rectangle {
     background-color: white;
-    height: 35vh;
-    width: 60vh;
+    height: 22rem;
+    width: 37rem;
     margin: auto;
     position: absolute;
-    top: 20vh;
+    top: 11.7rem;
     left: 0;
     right: 0;
-    border-radius: 20px;
+    border-radius: 2.5vh;
     display: flex;
     flex-direction: column;
     align-items: center;
