--- a/src/componentes/reusable/input_box/input_box.scss
+++ b/src/componentes/reusable/input_box/input_box.scss
@@ -10,7 +10,7 @@
     box-shadow: 1vh 1vh 1vh rgba(0, 0, 0, 0.2);
     border: 0.2vh #8B8B8B;
     color: $gris-titulo;
-    font-size: 2.5vh;
+    font-size: 1.5rem;
     font-family: "Inter", sans-serif;
     border-color: #c1c1c1;
     border-style: solid ;
