--- a/src/componentes/reusable/white_container/white_container.scss
+++ b/src/componentes/reusable/white_container/white_container.scss
@@ -24,11 +24,11 @@
     text-align: center;
     color: $gris-titulo; 
     //position: absolute;
-    top: 3vh; 
+    top: 2rem; 
     left: 0;
     right: 0;
-    margin-bottom: 3.5vh;
-    margin-top: 2.5vh;
+    margin-bottom: 2.4rem;
+    margin-top: 1.7rem;
   }
 
   .invisible-white-rectangle {
