Footer, pagina principal, cambiar contrasenia

--- a/src/componentes/reusable/coso_verde/coso_verde.scss
+++ b/src/componentes/reusable/coso_verde/coso_verde.scss
@@ -17,6 +17,10 @@
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
   }
 
+  .green-rectangle:hover{
+    cursor: pointer;
+  }
+
   .text {
     font-size: 2.7rem;
     font-family: "Inter", sans-serif;
