fix: map responsiveness

--- a/src/componentes/agregarCampo/agregarCampo.scss
+++ b/src/componentes/agregarCampo/agregarCampo.scss
@@ -3,8 +3,9 @@
 .agregar-campo-titulo {
   color: $verde-musgo;
   width: 80%;
-  margin: 2% 5%;
+  margin: 2% 0% 0% 3%;
   text-align: left;
+  font-size: xx-large;
 }
 
 .foto {
@@ -12,8 +13,8 @@
   text-align: center;
   border: 1px solid rgb(202, 202, 202);
   border-radius: 10px;
-  height: 70vh;
-  width: 100vh;
+  width: 50vw;
+  height: 60vh;
   margin-left: 4%;
 }
 
