--- a/src/componentes/reusable/map/agroMap.scss
+++ b/src/componentes/reusable/map/agroMap.scss
@@ -14,6 +14,11 @@
     height: 100%;
 }
 
+.mapa{
+  width: 100%;
+  height: 100%;
+}
+
 .mapboxgl-ctrl-group button.mapboxgl-ctrl-icon:hover {
   background-color: #f5f5f5;
 }
