--- a/src/componentes/reusable/card/card.scss
+++ b/src/componentes/reusable/card/card.scss
@@ -4,8 +4,14 @@
     border-color: $verde-principal;
     border-style: solid;
     align-content: center;
-    margin: 15% 25%;
+    //margin: 15% 25%;
     border-radius: 10px;
+    margin: 2rem 2rem;
+    padding: 1rem;
+    width: 70vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .min-content{
@@ -13,22 +19,15 @@
 }
 
 .max-content{
-  width: max-content;
+   max-width: 100vw;
 }
 
-.input {
-    margin: 2rem auto;
-    padding: 1rem;
-    max-width: 40rem;
-  }
-
-
-
-  .card{
+.card{
     background-color: #F1FFFA;
     box-shadow: 0 2px 8px rgba(0,0,0,0.26) ;
     border-radius: 10px;
     align-content: center;
     align-self: center;
+    
 }
   
