--- a/src/componentes/verCultivos/verCultivos.scss
+++ b/src/componentes/verCultivos/verCultivos.scss
@@ -1,9 +1,9 @@
 .image-container-mini {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-gap: 10px;
-  max-height: calc(100vh - 112px);
-  height: calc(100vh - 112px);
+  grid-gap: 25rem;
+  max-height: calc(80rem - 90rem);
+  height: calc(80rem - 90rem);
   overflow-y: auto;
 }
 
@@ -14,8 +14,8 @@
 }
 
 .image-container-mini img {
-  width: 97%; /* Las imágenes ocuparán todo el ancho disponible en el contenedor */
-  height: 97%; /* Las imágenes ocuparán todo el alto disponible en el contenedor */
+  width: 80rem; /* Las imágenes ocuparán todo el ancho disponible en el contenedor */
+  height: 80rem; /* Las imágenes ocuparán todo el alto disponible en el contenedor */
   object-fit: fill; /* Las imágenes se estirarán y deformarán para llenar el espacio disponible */
 }
 
@@ -24,23 +24,23 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 25vh;
+  height: 14rem;
 }
 
 .image-wrapper-mini img { 
-  width: 97%; /* Las imágenes ocuparán todo el ancho disponible en el contenedor */
-  height: 97%; /* Las imágenes ocuparán todo el alto disponible en el contenedor */
+  width: 10rem; /* Las imágenes ocuparán todo el ancho disponible en el contenedor */
+  height: 7rem; /* Las imágenes ocuparán todo el alto disponible en el contenedor */
   object-fit: fill;
 }
 
 .text-name {
   position: absolute;
-  bottom: 2vh;
-  left: 2vh; /* Ajusta el valor de 'left' según tu preferencia */
-  font-size: 5vh;
+  bottom: 5rem;
+  left: 1rem; /* Ajusta el valor de 'left' según tu preferencia */
+  font-size: 2.8rem;
   color: black;
   font-weight: normal;
-  padding: 5px;
+  padding: .02rem;
   border-radius: 5px;
   text-shadow: -0.25vh -0.25vh 0 white, 0.25vh -0.25vh 0 white, -0.25vh 0.25vh 0 white, 0.25vh 0.25vh 0 white;
   pointer-events: none;
