--- a/src/componentes/reusable/map/agroMap.scss
+++ b/src/componentes/reusable/map/agroMap.scss
@@ -9,24 +9,6 @@
   width: 32px;
 }
 
-.mapboxgl-canvas{
-    width: 100%;
-    height: 100%;
+.mapboxgl-ctrl-geocoder{
+  width: 100vw;
 }
-
-.mapa{
-  width: 100%;
-  height: 100%;
-}
-
-.mapboxgl-ctrl-group button.mapboxgl-ctrl-icon:hover {
-  background-color: #f5f5f5;
-}
-
-// .mapboxgl-ctrl-group button.mapboxgl-ctrl-icon.mapboxgl-ctrl-zoom-in {
-//   background-image: url('path/to/zoom-in-icon.png');
-// }
-
-// .mapboxgl-ctrl-group button.mapboxgl-ctrl-icon.mapboxgl-ctrl-zoom-out {
-//   background-image: url('path/to/zoom-out-icon.png');
-// }
