--- a/src/componentes/agregarCampo/agregarCampo.scss
+++ b/src/componentes/agregarCampo/agregarCampo.scss
@@ -37,4 +37,18 @@
 }
 
 
+.upload-image-container{
+  border: dashed;
+  border-color: gray;
+  width: 100%;
+  height: 20vh;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+  font-size: 100%;
+
+ 
+}
+
+
 
