fix: drag image input

--- a/src/componentes/reusable/header/header.scss
+++ b/src/componentes/reusable/header/header.scss
@@ -4,7 +4,7 @@ header{
     width: 100%;
     margin-top: 0%;
     background-color: $verde-principal;
-    height: 112px;
+    height: 10vh;
     display: flex;
     align-items: center;
     justify-content: space-between;
