--- a/src/componentes/agregarCampo/agregarCampo.scss
+++ b/src/componentes/agregarCampo/agregarCampo.scss
@@ -43,12 +43,31 @@
   width: 100%;
   height: 20vh;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   flex-direction: column;
   font-size: 100%;
+  background-color: $verde-clarito;
+  border-radius: 10px;
 
- 
+ span{
+  font-size: 2vh;
+  padding: 1rem;
+  color: gray;
+ }
+
+ :hover{
+  cursor: pointer;
+ }
+
 }
 
+.drop_area{
+  width: 100%;
+  display: flex;
+}
+
+// .ejTjHV{
+//   position: absolute;
+// }
 
 
