--- a/src/componentes/agregarCampo/agregarCampo.scss
+++ b/src/componentes/agregarCampo/agregarCampo.scss
@@ -66,6 +66,12 @@
   display: flex;
 }
 
+.imagen-campo img{
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+
 // .ejTjHV{
 //   position: absolute;
 // }
