--- a/src/componentes/agregarCampo/agregarCampo.scss
+++ b/src/componentes/agregarCampo/agregarCampo.scss
@@ -33,7 +33,8 @@
   position: absolute;
   bottom: 0;
   right: 0;
-  margin: 5vh;
+  margin-top: 2rem;
+  margin: 3vh;
 }
 
 
@@ -70,6 +71,7 @@
   width: 100%;
   height: 100%;
   border-radius: 10px;
+  margin-top: 0.5rem;
 }
 
 // .ejTjHV{
