--- a/src/componentes/reusable/input_box/input_box.scss
+++ b/src/componentes/reusable/input_box/input_box.scss
@@ -5,7 +5,7 @@
     height: 5vh;
     width: 45vh;
     background-color: #F1FFFA;
-    margin-bottom: 30px;
+    margin-bottom: 1rem;
     border-radius: 10px;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
     border: 1px #8B8B8B;
