--- a/src/componentes/verCultivos/verCultivos.scss
+++ b/src/componentes/verCultivos/verCultivos.scss
@@ -1,21 +1,21 @@
 .image-container-mini {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-gap: 25rem;
-  max-height: calc(80rem - 90rem);
-  height: calc(80rem - 90rem);
+  grid-gap: 3%;
+  max-height: calc(50% - 55%);
+  height: calc(50% - 55%);
   overflow-y: auto;
 }
 
 .rounded-image-mini {
-  border-radius: 20px;
+  border-radius: 1.3rem;
   width: 100%;
   height: auto;
 }
 
 .image-container-mini img {
-  width: 80rem; /* Las imágenes ocuparán todo el ancho disponible en el contenedor */
-  height: 80rem; /* Las imágenes ocuparán todo el alto disponible en el contenedor */
+  width: 50%; /* Las imágenes ocuparán todo el ancho disponible en el contenedor */
+  height: 50%; /* Las imágenes ocuparán todo el alto disponible en el contenedor */
   object-fit: fill; /* Las imágenes se estirarán y deformarán para llenar el espacio disponible */
 }
 
@@ -28,16 +28,16 @@
 }
 
 .image-wrapper-mini img { 
-  width: 10rem; /* Las imágenes ocuparán todo el ancho disponible en el contenedor */
-  height: 7rem; /* Las imágenes ocuparán todo el alto disponible en el contenedor */
+  width: 90%; /* Las imágenes ocuparán todo el ancho disponible en el contenedor */
+  height: 100%; /* Las imágenes ocuparán todo el alto disponible en el contenedor */
   object-fit: fill;
 }
 
 .text-name {
   position: absolute;
-  bottom: 5rem;
-  left: 1rem; /* Ajusta el valor de 'left' según tu preferencia */
-  font-size: 2.8rem;
+  bottom: 38%;
+  left: 10%; /* Ajusta el valor de 'left' según tu preferencia */
+  font-size: 300%;
   color: black;
   font-weight: normal;
   padding: .02rem;
