feat: agro icon

--- a/src/componentes/reusable/map/agroMap.scss
+++ b/src/componentes/reusable/map/agroMap.scss
@@ -5,8 +5,8 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   color: #000000;
   cursor: pointer;
-  height: 32px;
-  width: 32px;
+  height: 1vh;
+  width: 1vw;
 }
 
 .mapboxgl-ctrl-geocoder{
