--- a/src/componentes/reusable/header/header.scss
+++ b/src/componentes/reusable/header/header.scss
@@ -1,5 +1,12 @@
 @import "../../../assets/global.scss";
 
+.header-container{
+    width: 100%;
+    margin-top: 0%;
+    @include alignHorizontally;
+}
+
+
 header{
     width: 100%;
     margin-top: 0%;
@@ -28,6 +35,13 @@ h1{
 .user{
     margin-right: 1%;
     @include alignHorizontally;
+}
+
+@media screen and (max-width:62em) {
+
+  h1{
+    font-size: 4vh;
+  }
 }
 
 
