--- a/src/componentes/reusable/map/agroMap.scss
+++ b/src/componentes/reusable/map/agroMap.scss
@@ -10,13 +10,19 @@
 }
 
 .mapboxgl-ctrl-geocoder{
-  width: 100vw;
+  width: 25vw !important;
+  font-size: 15px!important;
+  line-height: 20px!important;
+  max-width: 360px!important;
+  min-width: 2px !important;
+  min-height: 2px !important;
 }
 
-
-@media screen and (max-width: 60em) {
-  .mapboxgl-ctrl-geocoder{
-    width: 30vw;
+.mapboxgl-ctrl-geocoder--input{
+  height: 5vh;
 }
+.mapboxgl-ctrl-geocoder--icon-search{
+  left: 7px;
+  width: 20px;
+  height: 20px;  
 }
-
