Responsiveness+Error message+Conexion back

--- a/src/componentes/reusable/white_container/white_container.scss
+++ b/src/componentes/reusable/white_container/white_container.scss
@@ -33,8 +33,8 @@
 
   .invisible-white-rectangle {
     background-color: white;
-    height: 70vh;
-    width: 60vh;
+    height: 40rem;
+    width: 35rem;
     margin: auto;
     position: absolute;
     top: 11.7rem;
