--- a/src/componentes/reusable/input_box/input_box.scss
+++ b/src/componentes/reusable/input_box/input_box.scss
@@ -5,7 +5,7 @@
     height: 3.2rem;
     width: 26rem;
     background-color: #F1FFFA;
-    margin-bottom: 5vh;
+    margin-bottom: 3rem;
     border-radius: 2vh;
     box-shadow: 1vh 1vh 1vh rgba(0, 0, 0, 0.2);
     border: 0.2vh #8B8B8B;
@@ -18,19 +18,43 @@
   }
 
 .sub-rectangle-red {
-  height: 3.2rem;
+  height: 3rem;
   width: 26rem;
   background-color: #fff5f1;
-  margin-bottom: 5vh;
+  margin-bottom: 3.2rem;
   border-radius: 2vh;
   box-shadow: 1vh 1vh 1vh rgba(0, 0, 0, 0.2);
-  border: 0.2vh solid #8b8b8b;
+  border: 0.3vh solid red;
   color: $gris-titulo;
   font-size: 1.5rem;
   font-family: "Inter", sans-serif;
-  border-color: #c1c1c1;
+  border-color: red;
   border-style: solid;
   padding-left: 2%;
+}
+
+.password-message {
+    position: absolute;
+    bottom: 8rem; // Adjust this value to control the distance from the input
+    left: 7.2rem; // Adjust this value to move the message to the right
+    color: red;
+    font-size: 0.75rem;
+}
+
+.mostrar-ocultar {
+  position: absolute;
+  top: 28.3rem;
+  right: 4.5rem;
+  transform: translateY(-0.9rem);
+  cursor: pointer;
+}
+
+.mostrar-ocultar-init-sesion {
+  position: absolute;
+  top: 15.3rem;
+  right: 4.5rem;
+  transform: translateY(-0.9rem);
+  cursor: pointer;
 }
 
 
