--- a/src/componentes/agregarCampo/agregarCampo.scss
+++ b/src/componentes/agregarCampo/agregarCampo.scss
@@ -14,7 +14,7 @@
   //border: 1px solid rgb(202, 202, 202);
   border-radius: 10px;
   width: 100%;
-  height: 60vh;
+  height: 70vh;
   //margin-left: 2%;
   padding: 1rem;
 }
@@ -52,20 +52,20 @@
   }
 }
 
-
-
+.derecha{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 80vh;  
+}
 
 .botones {
-  display: flex;
-  align-items: flex-end;
+  display: flex;  
   justify-content: flex-end;
+  align-items: center;
   gap:2vw;
   column-gap: 2vh;
-  //position: absolute;
-  bottom: 0;
-  right: 0;
-  margin-top: 2rem;
-  margin: 3vh;
 }
 
 
