--- a/src/componentes/reusable/input_box/input_box.scss
+++ b/src/componentes/reusable/input_box/input_box.scss
@@ -5,6 +5,7 @@
     height: 5vh;
     width: 45vh;
     background-color: #F1FFFA;
+    margin-left: 1rem;
     margin-bottom: 1rem;
     border-radius: 10px;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
@@ -21,6 +22,7 @@
     max-width: 45vw ;
     min-width: 1vw;
     width: min-content;
+    align-items: end;
   }
 
   /*
