--- a/src/componentes/reusable/input_box/input_box.scss
+++ b/src/componentes/reusable/input_box/input_box.scss
@@ -5,12 +5,20 @@
     height: 3.2rem;
     width: 26rem;
     background-color: #F1FFFA;
-    margin-bottom: 3rem;
-    border-radius: 2vh;
-    box-shadow: 1vh 1vh 1vh rgba(0, 0, 0, 0.2);
-    border: 0.2vh #8B8B8B;
+    // margin-bottom: 3rem;
+    // border-radius: 2vh;
+    // box-shadow: 1vh 1vh 1vh rgba(0, 0, 0, 0.2);
+    // border: 0.2vh #8B8B8B;
+    // color: $gris-titulo;
+    // font-size: 1.5rem;
+    margin-left: 1rem;
+    margin-bottom: 1rem;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+    border: 1px #8B8B8B;
     color: $gris-titulo;
-    font-size: 1.5rem;
+    font-size: 2vh;
+    //old
     font-family: "Inter", sans-serif;
     border-color: #c1c1c1;
     border-style: solid ;
@@ -23,6 +31,8 @@
     width: min-content;
     align-items: end;
   }
+
+  
 .sub-rectangle-red {
   height: 3rem;
   width: 26rem;
