--- a/src/componentes/background/background.scss
+++ b/src/componentes/background/background.scss
@@ -2,7 +2,8 @@
 
 .gradient-background {
   min-height: 100vh;
-  min-width: 100vw;
+  height: 58.5rem;
+  min-width: 80rem;
   background: linear-gradient(to bottom,
     #{$verde-claro-iniciar-sesion},
     #{$verde-intermedio-iniciar-sesion},
