--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -11,6 +11,8 @@ $celeste-link: #0085FF;
 $gris-texto: #535353;
 $gris-titulo: #464E47;
 
+$verde-nuevo: #2a7d2e;
+
 
 //degradado 
 $verde-claro-iniciar-sesion: #CCFCCB;
