--- a/src/componentes/reusable/coso_verde/coso_verde.scss
+++ b/src/componentes/reusable/coso_verde/coso_verde.scss
@@ -21,7 +21,7 @@
     cursor: pointer;
   }
 
-  .text {
+  .text-coso-verde {
     font-size: 2.7rem;
     font-family: "Inter", sans-serif;
     font-weight: bold;
