--- a/src/componentes/reusable/boton/button.scss
+++ b/src/componentes/reusable/boton/button.scss
@@ -2,15 +2,15 @@
 
 .green-button {
     background-color: $verde-oscuro;
-    border: solid;
-    border-color: $verde-oscuro;
     color: white;
     margin: 0.5%;
     margin-top: 10px;
     padding: 10px 30px;
-    border-radius: 10px;
+    border-radius: 30px;
     cursor: pointer;
     font-size: 20px;
+    border: solid;
+    border-style: 1px $verde-nuevo; 
     font-family: "Inter", sans-serif;
   }
 
@@ -20,13 +20,13 @@
 
   .cancelar{
     background-color: white !important;
-    color: $verde-oscuro !important;
+    color: $verde-nuevo !important;
   }
 
   .cancelar:hover{
-    background-color: $verde-principal !important;
+    background-color: $verde-nuevo !important;
     color: white  !important;
-    border-style: $verde-principal !important;
+    //border-style: $verde-nuevo !important;
   }
 
   .button-text {
@@ -46,8 +46,6 @@
     cursor: pointer;
     border-radius: 5px;
     margin-top: 0.5rem;
-    width: 100%;
-    position: relative !important;
   }
   
   .button:hover,
